# kAmp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-linux-platform.yml
include/: AbstractEffect.h  AccountComponent.h  ApiClient.h  AudioBuffer.h  BasePedalComponent.h  BottomMenuBarComponent.h  ChorusEffect.h  ChorusEffectComponent.h  ChromaticTuner.h  ChromaticTunerComponent.h  ConnectionComponent.h  DelayComponent.h  DelayEffect.h  DelayEffectComponent.h  DistortionEffect.h  DistortionEffectComponent.h  EffectComponent.h  EffectComponentFactory.h  EffectsFactory.h  EqualizerEffect.h  EqualizerEffectComponent.h  IEffect.h  LoginComponent.h  MainComponent.h  Manager.h  ModalOverlayComponent.h  NoiseGateEffect.h  NoiseGateEffectComponent.h  OktaverEffect.h  OktaverEffectComponent.h  Pedal.h  PedalPowerIndicatorComponent.h  PedalSettingsLayoutComponent.h  Pedalboard.h  PedalboardComponent.h  PopupContentComponent.h  PopupWindow.h  ResourceManager.h  ReverbEffect.h  ReverbEffectComponent.h  (+3 more)
src/: ApiClient.cpp  AudioBuffer.cpp  EffectComponentFactory.cpp  Main.cpp  MainComponent.cpp  Manager.cpp  Pedalboard.cpp
src/components/: AccountComponent.cpp  BasePedalComponent.cpp  BottomMenuBarComponent.cpp  ChorusEffectComponent.cpp  ChromaticTunerComponent.cpp  ConnectionComponent.cpp  DelayComponent.cpp  DelayEffectComponent.cpp  DistortionEffectComponent.cpp  EffectComponent.cpp  EqualizerEffectComponent.cpp  LoginComponent.cpp  NoiseGateEffectComponent.cpp  PedalPowerIndicatorComponent.cpp  PedalSettingsLayoutComponent.cpp  PedalboardComponent.cpp  SettingsComponent.cpp  TopMenuBarComponent.cpp
src/components/effects/: BasePedalComponent.cpp  ChorusEffectComponent.cpp  DelayEffectComponent.cpp  DistortionEffectComponent.cpp  OktaverEffectComponent.cpp  (+1 more)
src/effects/: ChorusEffect.cpp  ChromaticTuner.cpp  DelayEffect.cpp  DistortionEffect.cpp  EffectsFactory.cpp  EqualizerEffect.cpp  NoiseGateEffect.cpp  OktaverEffect.cpp  ReverbEffect.cpp
src/models/: Pedal.cpp
src/utils/: EffectSerializer.cpp  ModalOverlayComponent.cpp  ResourceManager.cpp  ToggleButtonComponent.cpp
(+2 files in other folders)
